--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,18 +7,24 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.dalvik.pokemonsters.HomeFragment"
+        android:name="com.dalvik.pokemonsters.ui.news.NewsFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_homeFragment_to_detailNewsFragment"
             app:destination="@id/detailNewsFragment"
             app:enterAnim="@anim/slide_up"
-            app:popExitAnim="@anim/slide_down"/>
+            app:popExitAnim="@anim/slide_down" />
     </fragment>
     <fragment
         android:id="@+id/detailNewsFragment"
-        android:name="com.dalvik.pokemonsters.DetailNewsFragment"
+        android:name="com.dalvik.pokemonsters.ui.news.DetailNewsFragment"
         android:label="fragment_detail_news"
         tools:layout="@layout/fragment_detail_news" />
+    <fragment
+        android:id="@+id/pokemonFragment"
+        android:name="com.dalvik.pokemonsters.PokemonFragment"
+        android:label="fragment_pokemon"
+        tools:layout="@layout/fragment_pokemon_home" />
+
 </navigation>
