--- a/app/src/main/res/layout/alert_snack_view.xml
+++ b/app/src/main/res/layout/alert_snack_view.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_20sdp"
         android:layout_marginVertical="@dimen/_20sdp"
-        android:background="@drawable/background_rounded"
+        android:background="@drawable/background_rounded_white"
         android:elevation="@dimen/_10sdp"
         android:gravity="center"
         android:orientation="horizontal"
@@ -28,8 +28,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_16sdp"
-            tools:src="@drawable/ic_cancel"
-            android:contentDescription="@string/app_name" />
+            android:contentDescription="@string/app_name"
+            tools:src="@drawable/ic_cancel" />
 
         <TextView
             android:id="@+id/message"
