--- a/app/src/main/res/layout/loader.xml
+++ b/app/src/main/res/layout/loader.xml
@@ -8,23 +8,24 @@
     android:orientation="vertical">
 
     <com.airbnb.lottie.LottieAnimationView
-        android:layout_width="@dimen/_30sdp"
-        android:layout_height="@dimen/_30sdp"
+        android:layout_width="@dimen/_20sdp"
+        android:layout_height="@dimen/_20sdp"
+        android:layout_margin="@dimen/_20sdp"
+        android:backgroundTint="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
-        android:backgroundTint="@color/black"
-        app:lottie_rawRes="@raw/pokeball_load"
-        android:layout_margin="@dimen/_20sdp"/>
+        app:lottie_rawRes="@raw/pokeball_load" />
+
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:indeterminateDuration="@integer/material_motion_duration_long_1"
         android:indeterminateTint="@color/primary_text"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:visibility="gone"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
