--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -54,6 +54,37 @@
         <item name="android:paddingStart">@dimen/_14sdp</item>
     </style>
 
+
+    <style name="TextViewTitlePokemon" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/secondary_text</item>
+        <item name="android:fontFamily">@font/lato_regular</item>
+        <item name="android:textSize">@dimen/_12sdp</item>
+        <item name="android:elevation">2dp</item>
+        <item name="android:layout_marginTop">@dimen/_12sdp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingEnd">@dimen/_14sdp</item>
+        <item name="android:paddingStart">@dimen/_14sdp</item>
+    </style>
+
+
+    <style name="TextViewDescriptionPokemon" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/primary_text</item>
+        <item name="android:fontFamily">@font/lato_bold</item>
+        <item name="android:textSize">@dimen/_12sdp</item>
+        <item name="android:elevation">2dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingEnd">@dimen/_14sdp</item>
+        <item name="android:paddingStart">@dimen/_14sdp</item>
+    </style>
+
+    <style name="TextViewDescriptionBold" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/secondary_text</item>
+        <item name="android:fontFamily">@font/lato_black</item>
+        <item name="android:textSize">@dimen/_14sdp</item>
+        <item name="android:layout_marginTop">@dimen/_10sdp</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
     <style name="SearchEdittext" parent="TextAppearance.AppCompat">
         <item name="android:textColor">@color/purple_700</item>
         <item name="android:textColorHint">@color/secondary_text</item>
