--- a/app/src/main/res/layout/fragment_region_pokemon.xml
+++ b/app/src/main/res/layout/fragment_region_pokemon.xml
@@ -25,7 +25,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:onRefreshListener="@{() -> viewModel.getPokemons(1)}"
+            app:onRefreshListener="@{() -> viewModel.getPokemonRegion()}"
             app:refreshing="@{viewModel.isLoading}">
 
             <androidx.recyclerview.widget.RecyclerView
