--- a/app/src/main/res/layout/fragment_region_pokemon.xml
+++ b/app/src/main/res/layout/fragment_region_pokemon.xml
@@ -9,6 +9,12 @@
             name="viewModel"
             type="com.dalvik.pokemonsters.ui.region_pokemon.RegionPokemonViewModel" />
 
+        <variable
+            name="nameRegion"
+            type="String" />
+        <variable
+            name="subtitle"
+            type="String" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,6 +23,53 @@
         android:background="@color/purple_700"
         tools:context=".RegionPokemonFragment">
 
+        <TextView
+            android:id="@+id/text_region_name"
+            style="@style/TextViewTitleBold"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@{nameRegion}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:layout_marginEnd="@dimen/_5sdp"
+            android:background="@color/secondary_text"
+            app:layout_constraintBottom_toBottomOf="@+id/text_first_medal"
+            app:layout_constraintEnd_toStartOf="@+id/text_first_medal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_region_name" />
+
+        <TextView
+            android:id="@+id/text_first_medal"
+            style="@style/TextViewTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="@dimen/_14sdp"
+            android:text="@{subtitle}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_region_name"
+            tools:text="151 pokemon encontrados \nen esta region"/>
+
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:layout_marginEnd="@dimen/_5sdp"
+            android:background="@color/secondary_text"
+            app:layout_constraintBottom_toBottomOf="@+id/text_first_medal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/text_first_medal"
+            app:layout_constraintTop_toBottomOf="@+id/text_region_name" />
+
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipe"
             android:layout_width="0dp"
@@ -24,7 +77,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_first_medal"
             app:onRefreshListener="@{() -> viewModel.getPokemonRegion()}"
             app:refreshing="@{viewModel.isLoading}">
 
@@ -32,8 +85,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                app:spanCount="3"
                 app:listPokemon="@{viewModel.itemList}"
+                app:spanCount="3"
                 tools:listitem="@layout/item_list_pokemon" />
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
