--- a/app/src/main/res/layout/item_list_regions.xml
+++ b/app/src/main/res/layout/item_list_regions.xml
@@ -11,9 +11,9 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/frame"
-        android:layout_width="@dimen/_250sdp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_10sdp"
         android:background="@android:color/transparent"
         android:padding="@dimen/_5sdp">
 
@@ -66,11 +66,15 @@
             app:src="@{region.imgUrl}" />
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/card_container"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_alignParentStart="true"
             app:cardBackgroundColor="@color/purple_500"
             app:cardCornerRadius="@dimen/_10sdp"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?selectableItemBackground"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
